[package]
name = "hash_cli"
version = "0.1.0"
edition = "2021"
authors = ["Konstantin Kozoriz <kkozoriz7@yandex.ru>"]
readme = "README.md"
description = "Hash Finder is a command-line application developed in Rust that iterates through integers starting from 1, computes their SHA-256 hash, and prints the integer and its corresponding hash if the hash ends with a specified number of zeroes."

[profile.release]
opt-level = 3
lto = true

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
sha2 = "0.11.0-pre.3"
hex = "0.4.3"
num_cpus = "1.16.0"